add custom manager_panel, change personal account logik, add enrollment model, fix all html, fix main/view, fix main/url

--- a/main/templates/main/about-us.html
+++ b/main/templates/main/about-us.html
@@ -8,7 +8,7 @@
 
    <!-- breadcrumb area start -->
    <div class="breadcrumb__area include-bg pt-200 pb-150 breadcrumb__overlay"
-      data-background="{% static 'main/img/breadcrumb/breadcrumb-bg.png' %}">
+      data-background="{% static 'main/img/breadcrumb/breadcrumb-bg-1.png' %}">
       <div class="container">
          <div class="row">
             <div class="col-xxl-12">
@@ -66,7 +66,7 @@
                   </ul>
                </div>
                <div class="tp-hero__btn-wrappper">
-                  <a href="#" class="tp-border-btn br-0">
+                  <a href="{% url 'register' %}" class="tp-border-btn br-0">
                      <span>Начать</span>
                      <div class="transition"></div>
                   </a>
