--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -109,7 +109,7 @@
                                  <a href="{% url 'about' %}">О нас</a>
                                  <ul class="submenu">
                                     <li><a href="#">Наши преподаватели</a></li>
-                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="{% url 'faq' %}">FAQ</a></li>
                                  </ul>
                               </li>
                            </ul>
