--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -35,7 +35,7 @@
          </div>
          <div class="col-lg-5">
             <div class="tp-hero__img">
-               <img src="{% static 'main/img/hero/hero-img-1.png' %}" alt="hero">
+               <img src="{% static 'main/img/hero/hero-img-2.png' %}" alt="hero">
             </div>
          </div>
       </div>
@@ -338,7 +338,7 @@
          <div class="row">
             {% for blog in blogs %}
             <div class="col-lg-3 col-md-6">
-               <div class="tp-event__item mb-30">
+               <div class="tp-event__item mb-30 h-100">
                   <div class="tp-event__thumb w-img fix">
                      <img src="{{ blog.image }}" alt="">
                   </div>
@@ -346,7 +346,7 @@
                      <div class="tp-event__meta mb-10">
                         <span class="event-date"><i class="fa-solid fa-circle-small"></i> {{ blog.date }}</span>
                      </div>
-                     <h3 class="tp-event__title mb-30"><a href="#"> {{ blog.title }}</a></h3>
+                     <h3 class="tp-event__title mb-30"><a href="{% url 'blog' %}"> {{ blog.title }}</a></h3>
                      <a href="{% url 'blog' %}" class="more-btn">Читать Блог <i class="fa-regular fa-arrow-right"></i></a>
                   </div>
                </div>
