--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -92,9 +92,7 @@
                          </div>
                          <div class="contact__info-text">
                             <h4>Офис в Минске</h4>
-
-                            <p><a target="_blank" href="https://www.google.com/maps/place/ул.+Тимирязева+67,+Минск,+Беларусь/@53.9265135,27.5238794,17z">Беларусь, Минск, ул.Тимирязева, д.67</a></p>
-
+                            <p><a target="_blank" href="https://yandex.by/maps/org/teachmeskills/1390679023/?ll=27.508174%2C53.925269&z=16">Беларусь, Минск, ул.Тимирязева, д.67</a></p>
                          </div>
                       </div>
                    </li>
@@ -147,7 +145,7 @@
 <div class="tp-contact-map">
  <div class="container-fluid p-0">
     <div class="tp-map-height">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2351.2270634364086!2d27.52130441581388!3d53.92651353977624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbd1f398f624e7%3A0x9f5461ae1d6e4c2f!2z0YPQuy4g0KLQtdC70YzQvdC40LrQsNGPINCf0LDQstC-0LvQsCA2Nywg0JzQvtGB0LrQstCwLCDQnNC-0YHQutCy0LAsINCd0YDRg9C80L7QtNC40Y8!5e0!3m2!1sru!2sby!4v1713707275282!5m2!1sru!2sby" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <iframe src="https://yandex.by/map-widget/v1/?pt=27.508174,53.925269&z=16&l=map&oid=1390679023" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
  </div>
 </div>
