--- a/main/templates/main/faq.html
+++ b/main/templates/main/faq.html
@@ -8,16 +8,16 @@
 
       <!-- breadcrumb area start -->
       <div class="breadcrumb__area include-bg pt-200 pb-150 breadcrumb__overlay"
-         data-background="assets/img/breadcrumb/breadcrumb-bg.jpg">
+         data-background="{% static 'main/img/breadcrumb/breadcrumb-bg-1.png' %}">
          <div class="container">
             <div class="row">
                <div class="col-xxl-12">
                   <div class="breadcrumb__content p-relative z-index-1">
-                     <h3 class="breadcrumb__title">FAQ</h3>
+                     <h3 class="breadcrumb__title">Часто задаваемые вопросы</h3>
                      <div class="breadcrumb__list">
-                        <span><a href="#">Home</a></span>
+                        <span><a href="{% url 'index' %}">Главная страница</a></span>
                         <span class="dvdr"><i class="fa-regular fa-angle-right"></i></span>
-                        <span>faq</span>
+                        <span>FAQ</span>
                      </div>
                   </div>
                </div>
@@ -34,14 +34,14 @@
                <div class="tp-custom-accordio">
                   <div class="accordion" id="accordionExample">
                      {% for faq in faqs %}
-                     <div class="accordion-items">
-                        <h2 class="accordion-header" id="headingOne">
+                     <div class="accordion-items faq-accordio-border">
+                        <h2 class="accordion-header" id="heading{{ faq.id }}">
                            <button class="accordion-buttons" type="button" data-bs-toggle="collapse"
-                              data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              data-bs-target="#collapse{{ faq.id }}" aria-expanded="true" aria-controls="collapse{{ faq.id }}">
                               {{ faq.question }}
                            </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        <div id="collapse{{ faq.id }}" class="accordion-collapse collapse" aria-labelledby="heading{{ faq.id }}"
                            data-bs-parent="#accordionExample">
                            <div class="accordion-body">
                               {{ faq.answer }}
