fix front details, add leave me logged in logic and forgot my password logic in main/views.py

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -105,9 +105,9 @@
                             </svg>
                          </div>
                          <div class="contact__info-text">
-                            <h4>Email us directly</h4>
-                            <p><a href="mailto:support@Tutorgo.com">support@Tutorgo.com</a></p>
-                            <p><a href="mailto:info@Tutorgo.com"> info@Tutorgo.com</a></p>
+                            <h4>Напишите нам напрямую</h4>
+                            <p><a href="mailto:support@Tutorgo.com">example@mail.com</a></p>
+                            <p><a href="mailto:info@Tutorgo.com"> emample@gmail.com</a></p>
                          </div>
                       </div>
                    </li>
@@ -119,9 +119,9 @@
                                </svg>
                          </div>
                          <div class="contact__info-text">
-                            <h4>Phone</h4>
-                            <p><a href="tel:+(426)-742-26-44">+(426) 742 26 44</a></p>
-                            <p><a href="tel:+(224)-762-442-32">+(224) 762 442 32</a></p>
+                            <h4>Телефоны</h4>
+                            <p><a href="tel:+375(29)123-45-67">+375 (29) 123 45 67</a></p>
+                            <p><a href="tel:+375(44)123-45-67">+375 (44) 123 45 67</a></p>
                          </div>
                       </div>
                    </li>
