--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -47,7 +47,7 @@
                <div class="sign__wrapper white-bg">
                   <div class="sign__header mb-35">
                      <div class="sign__in text-center">
-                        <p><span>........</span> Или, <a href="{% url 'login' %}">войти</a> в аккаунт <span>........</span></p>
+                        <p> <a href="{% url 'login' %}"><span>........</span> Или, войти в аккаунт <span>........</span></a> </p>
                      </div>
                   </div>
                   <div class="sign__form">
