--- a/main/templates/main/logout.html
+++ b/main/templates/main/logout.html
@@ -39,8 +39,14 @@
                <div class="col-xxl-8 offset-xxl-2 col-xl-8 offset-xl-2">
                   <div class="tp-section__title-wrapper text-center mb-55">
                      <h2 class="tp-section__title">Вы вышли из аккаунта.</h2>
-                     <p><a href="{% url 'login' %}">Войти заново.</a></p>
-                     <p><a href="{% url 'register' %}">Или зарегистрируйтесь здесь.</a></p>
+                     <div class="sign__header mb-35">
+                        <div class="sign__in text-center">
+                           <p><a href="{% url 'login' %}"><span>........</span> Войти в аккаунт снова <span>........</span></a></p>
+                        </div>
+                        <div class="sign__in text-center">
+                           <p><a href="{% url 'register' %}"><span>........</span> Или, зарегистрироваться тут <span>........</span></a></p>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
