--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -108,7 +108,7 @@
                               <li class="has-dropdown">
                                  <a href="{% url 'about' %}">О нас</a>
                                  <ul class="submenu">
-                                    <li><a href="#">Наши преподаватели</a></li>
+                                    <li><a href="{% url 'teachers_list' %}">Наши преподаватели</a></li>
                                     <li><a href="{% url 'faq' %}">FAQ</a></li>
                                  </ul>
                               </li>
