--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}About Us{% endblock %}
+{% block title %}Свяжись с нами{% endblock %}
 
 {% block content %}
 {% load static %}
@@ -38,26 +38,27 @@
                 <p>Есть вопрос или просто хотите поздороваться? Мы будем рады услышать вас.</p>
              </div>
              <div class="contact__form mb-30">
-                <form action="assets/mail.php" id="contact-form">
+                <form method="post" action="">
+                   {% csrf_token %}
                    <div class="row">
                       <div class="col-xxl-6 col-xl-6 col-md-6">
                          <div class="contact__form-input">
-                            <input type="text" placeholder="Ваше имя" name="name">
+                            <input type="text" placeholder="Ваше имя" name="name" required>
                          </div>
                       </div>
                       <div class="col-xxl-6 col-xl-6 col-md-6">
                          <div class="contact__form-input">
-                            <input type="email" placeholder="Ваш Email" name="email">
+                            <input type="email" placeholder="Ваш Email" name="email" required>
                          </div>
                       </div>
                       <div class="col-xxl-12">
                          <div class="contact__form-input">
-                            <input type="text" placeholder="Тема" name="subject">
+                            <input type="text" placeholder="Тема" name="subject"required>
                          </div>
                       </div>
                       <div class="col-xxl-12">
                          <div class="contact__form-input">
-                            <textarea placeholder="Введите ваше сообщение" name="message"></textarea>
+                            <textarea placeholder="Введите ваше сообщение" name="message" required></textarea>
                          </div>
                       </div>
                       <div class="col-xxl-12">
